# FacebookApiPolAdsCollector

./: .gitignore  .gitmodules  Keywords.txt  LICENSE  README.md  active_ads_fb_collector.py  ad_type_classifier_trainer.py  advertiser_pages.csv  archive_id_batcher.py  config.cfg.EXAMPLE  config_utils.py  data_analysis.py  data_expose.py  db_functions.py  fb_ad_creative_retriever.py  fb_ad_creative_retriever_test.py  fb_ad_image_retriever.py  fb_pol_ads_collector.py  fbactiveads  fbapipolads_schema.sql  generic_fb_collector.py  generic_fb_collector_test.py  helper_fns.py  local_filesystem_collector.py  named_entity_extractor.py  page_id_fb_collector.py  requirements.txt  sim_hash_ad_creative_text.py  slack_notifier.py  snapshot_url_util.py  standard_logger_config.py  tasks.py  update_ad_types.py
ad_deduplication/: ad_deduper.py
ad_reporting_tool/: find_text_and_image_clusters.py  get_snapshot_urls_for_random_duplicate_simhash.py  text_clustering_utils.py
ad_screener_backend/: app.py
ad_type_classification/: ad_creative_body_processor.py  ad_type_classifier_trainer.py  data_analysis.py  db_functions.py  helper_fns.py  text_process_fns.py  update_ad_types.py
advertiser_scoring/: advertiser_score_prototype.py  advertiser_scorer.py
crowdtangle/: EXAMPLE.cfg  READMEmd  convert_big_query_dict_schema_to_sql.py  crowdtangle_bigquery_schema.py  db_functions.py  (+6 more)
crowdtangle-postprocess/: crowdtangle_dal.py  dal_ukr.py  db_conn.py  db_engine_function.py  index.py  models.py  utils.py
crowdtangle-raw/: README.md  fetch-and-save.py  make-supervisord-conf.py  pyproject.toml
(+1009 files in other folders)
