[tool.poetry]
name = "crowdtangle-raw"
version = "0.1.0"
description = ""
authors = ["william <wp2168@nyu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
ratelimiter = "^1.2.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

